tests/neg-macros/i9972b/Macro_1.scala

def test: Unit =
  summon[scala.util.Not[T[Int]]] // error
